--- a/index.html
+++ b/index.html
@@ -84,8 +84,104 @@ var debug = {};
         var isDecomposedByVar;
         var relatedObjectVar;
         var relatingObjectVar;
-        var testProject;
+        /* From get all of type "ifcProject" */
+        var ifcProject;
+        /* All the IFC Types */
+        var ifcTypes;
+        /* If it is Ifc Door or Ifc Project or IfcSpace */
+        var nodeType;
+        var hasAssociationVar;
+        var testModel;
 
+
+//        new Edit
+        Global = {};
+
+        function Notifier() {
+            var othis = this;
+
+            this.setSelector = function(selector) {
+                var currentmessage = $(othis.selector).find(".message").html();
+                $(othis.selector).hide();
+                othis.selector = selector;
+                if (currentmessage != "" && currentmessage != undefined) {
+                    $(selector).show();
+                    $(selector).find(".message").html(currentmessage).parent().addClass("alert-success");
+                } else {
+                    $(othis.selector).hide();
+                }
+                $(othis.selector).find(".close").click(othis.clear);
+            };
+
+            this.clear = function() {
+                $(othis.selector).find(".message").html("").parent().hide();
+            };
+
+            this.resetStatus = function(){
+                if (othis.lastTimeOut != null) {
+                    clearTimeout(othis.lastTimeOut);
+                    othis.lastTimeOut = null;
+                }
+                $(othis.selector).stop(true, true);
+                $(othis.selector).fadeOut(1000);
+            };
+
+            this.resetStatusQuick = function(){
+                if (othis.lastTimeOut != null) {
+                    clearTimeout(othis.lastTimeOut);
+                    othis.lastTimeOut = null;
+                }
+                $(othis.selector).hide();
+            };
+
+            this.setSuccess = function(status, timeToShow) {
+                if (timeToShow == null) {
+                    timeToShow = 5000;
+                }
+                $(othis.selector).stop(true, true);
+                if (othis.lastTimeOut != null) {
+                    clearTimeout(othis.lastTimeOut);
+                    othis.lastTimeOut = null;
+                }
+                $(othis.selector).find(".message").html(status).parent().removeClass("initialhide").removeClass("alert-danger").removeClass("alert-info").addClass("alert-success").show();
+                var notifier = this;
+                if (timeToShow != -1) {
+                    othis.lastTimeOut = setTimeout(function(){
+                        notifier.resetStatus();
+                    }, timeToShow);
+                }
+            };
+
+            this.setInfo = function(status, timeToShow) {
+                if (timeToShow == null) {
+                    timeToShow = 5000;
+                }
+                $(othis.selector).stop(true, true);
+                if (othis.lastTimeOut != null) {
+                    clearTimeout(othis.lastTimeOut);
+                    othis.lastTimeOut = null;
+                }
+                $(othis.selector).find(".message").html(status).parent().show().removeClass("alert-danger").removeClass("alert-success").addClass("alert-info");
+                var notifier = this;
+                if (timeToShow != -1) {
+                    othis.lastTimeOut = setTimeout(function(){
+                        notifier.resetStatus();
+                    }, timeToShow);
+                }
+            };
+
+            this.setError = function(error) {
+                if (othis.lastTimeOut != null) {
+                    clearTimeout(othis.lastTimeOut);
+                    othis.lastTimeOut = null;
+                }
+                $(othis.selector).find(".message").html(error).parent().removeClass("alert-info").removeClass("alert-success").addClass("alert-danger").show();
+            };
+
+            othis.setSelector(".indexStatus .status");
+        }
+
+        Global.notifier = new Notifier();
 
     </script>
 <script type="text/javascript" src="./js/final.js"></script>
@@ -107,29 +203,28 @@ var debug = {};
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Mitra</a>
+      <a class="navbar-brand" href="#">BIM</a>
     </div>
   </div><!-- /.container-fluid -->
 </nav>
 
 <!-- End of NavBar -->
-
-
 <!-- Stack the columns on mobile by making one full-width and the other half-width -->
 <div class="row">
     <!-- Div for the project tree viewer -->
   	<div class="col-xs-3" >
         <div class="col-xs-12">
-            <div class="col-lg-12">
+            <!-- <div class="col-lg-12">
                 <h3>Projects Structure</h3>
-                <!--<button id="hideRevision" >hide</button>-->
-            </div>
+                <button onclick="createDecomposedTree(ifcProject,1,ifcTypes)" >hide</button>
+                <button onclick="loadAllTheData()" >load the tree</button>
+            </div> -->
 
             <!-- Div tag to display the json tree view-->
-            <div id="ifcSpaceTree" class="treeClass col-lg-12" style="height: 300px; overflow: auto">
+            <!-- <div id="ifcSpaceTree" class="treeClass col-lg-12" style="height: 300px; overflow: auto">
 
             </div>
-
+ -->
             <!-- Div tag to display the json tree view-->
             <div id="treeViewDiv" class="col-lg-12" style="height: 300px; overflow: auto">
 
@@ -138,20 +233,6 @@ var debug = {};
 
 
         </div>
-
-        <!--#object_info table#table_info tbody-->
-
-        <!--<div class="col-xs-12">-->
-            <!--<div class="col-lg-12">-->
-                <!--<h3>Space Structure</h3>-->
-                <!--<button id="refreshTree" >refresh</button>-->
-            <!--</div>-->
-
-            <!--&lt;!&ndash;&lt;!&ndash; Div tag to display the json tree view&ndash;&gt;&ndash;&gt;-->
-            <!--&lt;!&ndash;<div class="treeClass col-lg-12" style="height: 100px; overflow: auto">&ndash;&gt;-->
-
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
-        <!--</div>-->
 	</div>
 
   	<!-- Div for the 3d renderer+ -->
@@ -207,17 +288,271 @@ var debug = {};
 
 
 <script>
+
+    function loadProjectTree(project, roid, node, types){
+          buildDecomposedTree(project, node, types);
+    };
+
+    function createDecomposedTree(object,tree,types) {
+        var name = null;
+        if (object.getLongName != null) {
+            if (object.getLongName() != null && object.getLongName() != "") {
+                name = object.getLongName();
+            }
+        }
+        if (name == null) {
+            if (object.getName() != null && object.getName() != "") {
+                name = object.getName();
+            }
+        }
+        if (name == null) {
+            name = "Unknown";
+        }
+
+////        create a new node
+//        var newNode = Object.create(Node.prototype);
+////        add the id to the newly created node
+//        newNode.init(object.oid, name);
+//        newNode.type = object.getType();
+        var newNode = "newNode";
+        nodeType = object.getType();
+
+//        Setting Up the Icon for the nodeType
+//        if (object.getType() == "IfcProject" || object.getType() == "IfcSite" || object.getType() == "IfcBuilding" || object.getType() == "IfcBuildingStorey" || object.getType() == "IfcSpace") {
+//            newNode.setIcon("hierarchy");
+//        } else {
+//            newNode.setIcon("ball");
+//        }
+
+
+//        Functionalites to the node
+//        newNode.click(othis.treeItemClick);
+//        newNode.hint(object.getType());
+//        var state = types[object.getType()];
+//        othis.createEye(newNode, state == null ? 2 : state.mode);
+//        tree.add(newNode);
+        if (object.getType() == "IfcBuildingStorey") {
+            loadBuildingStorey(newNode, object, types)
+        } else {
+            object.getIsDecomposedBy(function (isDecomposedBy) {
+                isDecomposedBy.getRelatedObjects(function (relatedObject) {
+                    createDecomposedTree(relatedObject, newNode, types);
+                });
+            });
+            if (object.getContainsElements != null) {
+                object.getContainsElements(function (containedElement) {
+                    containedElement.getRelatedElements(function (relatedElement) {
+                        createDecomposedTree(relatedElement, newNode, types);
+                    });
+                });
+            }
+        }
+    }
+
+    function loadBuildingStorey(newNode, object, types){
+        var createdTypes = {};
+        object.getContainsElements(function(relReferencedInSpatialStructure){
+            relReferencedInSpatialStructure.getRelatedElements(function(relatedElement){
+                processRelatedElement(newNode, relatedElement, createdTypes, types);
+            }).done(function(){
+                object.getIsDecomposedBy(function(isDecomposedBy){
+                    if (isDecomposedBy != null) {
+                        isDecomposedBy.getRelatedObjects(function(relatedObject){
+                            processRelatedElement(newNode, relatedObject, createdTypes, types);
+                        });
+                    }
+                });
+            });
+        })
+    };
+
+    function processRelatedElement(parentNode, relatedElement, createdTypes, types){
+        typeNode = createdTypes[relatedElement.getType()];
+        if (typeNode == null) {
+            var typeNode = Object.create(Node.prototype);
+            typeNode.init(relatedElement.getType(), stripIfc(relatedElement.getType()));
+
+            typeNode.setIcon("types");
+            typeNode.type = relatedElement.getType();
+
+            if (types[relatedElement.getType()] == null) {
+                othis.createEye(typeNode, 2);
+            } else {
+                othis.createEye(typeNode, types[relatedElement.getType()].mode);
+            }
+
+            createdTypes[relatedElement.getType()] = typeNode;
+            parentNode.add(typeNode);
+        }
+        createDecomposedTree(relatedElement, typeNode, types);
+    };
+
+
+
     // testing  functions
-    function runIt(){
-        testProject.getIsDecomposedBy(function(isDecomposed){isDecomposedByVar= isDecomposed});
-        isDecomposedByVar.getRelatedObjects(function(related){
-            console.log("dudeee");
-            relatedObjectVar = related
+    function startDecompose(object,id){
+
+//        object.model.loadedTypes.IfcDoor['12517654'].getIsDefinedBy(function(definedBy){
+//            definedBy.getRelatedObjects(function(related){
+//                    console.log(related);
+//                })
+//        })
+//
+//        object.model.loadedTypes.IfcDoor['12517654'].getHasAssociations(function(association){
+//            association.getRelatedObjects(function(related){
+//                console.log(related);
+//            })
+//        })
+
+//        if(id==5 || id==4){
+//            object.getHasAssociations(function(association){
+//                association.getRelatedObjects(function(related){
+//                    related.getHasAssociations(function(association1){
+//                        console.log(association1);
+//                    })
+//                })
+//            })
+//            object.getHasAssignments(function(assignments){
+//                console.log(assignments);
+//            })
+////            object.getBoundedBy(function(boundedBy){
+////                console.log(boundedBy);
+////            })
+////            object.getCompositionType(function(compositionType){
+////                console.log(compositionType);
+////            })
+//            object.getContainsElements(function(contains){
+//                console.log(contains);
+//            })
+//            object.getDecomposes(function(decomposes){
+//                console.log(decomposes);
+//            })
+//            object.getReferencedBy(function(decomposes){
+//                console.log(decomposes);
+//            })
+//            object.getReferencesElements(function(decomposes){
+//                console.log(decomposes);
+//            })
+//            object.getIsDefinedBy(function(definedBy){
+//                definedBy.getRelatedObjects(function(related){
+//                    console.log(related);
+//                })
+//
+//            })
+//
+//
+//
+//
+//        }
+//
+        object.getIsDecomposedBy(function(isDecomposed){
+            isDecomposedByVar= isDecomposed;
+            isDecomposedByVar.getRelatedObjects(function(related){
+                relatedObjectVar = related;
+                startDecompose(related,id+1)
+            });
+            isDecomposedByVar.getRelatingObject(function(related){
+                relatingObjectVar = related
+            });
         });
-        isDecomposedByVar.getRelatingObject(function(related){
-            console.log("dudeee  222");
-            relatingObjectVar = related
-        });
+
+
+    }
+</script>
+
+<script>
+
+    function loadAllTheData(){
+        //            Edit by Niro
+        var preLoadQuery = {
+            defines: {
+                Representation: {
+                    field: "Representation"
+                },
+                ContainsElementsDefine: {
+                    field: "ContainsElements",
+                    include: {
+                        field: "RelatedElements",
+                        include: [
+                            "IsDecomposedByDefine",
+                            "ContainsElementsDefine",
+                            "Representation"
+                        ]
+                    }
+                },
+                IsDecomposedByDefine: {
+                    field: "IsDecomposedBy",
+                    include: {
+                        field: "RelatedObjects",
+                        include: [
+                            "IsDecomposedByDefine",
+                            "ContainsElementsDefine",
+                            "Representation"
+                        ]
+                    }
+                }
+            },
+            queries: [
+                {
+                    type: "IfcProject",
+                    include: [
+                        "IsDecomposedByDefine",
+                        "ContainsElementsDefine"
+                    ]
+                },
+                {
+                    type: "IfcRepresentation",
+                    includeAllSubtypes: true
+                },
+                {
+                    type: "IfcProductRepresentation"
+                },
+                {
+                    type: "IfcPresentationLayerWithStyle"
+                },
+                {
+                    type: "IfcProduct",
+                    includeAllSubTypes: true
+                },
+                {
+                    type: "IfcProductDefinitionShape"
+                },
+                {
+                    type: "IfcPresentationLayerAssignment"
+                },
+                {
+                    type: "IfcRelAssociatesClassification",
+                    include: [
+                        {
+                            field: "RelatedObjects"
+                        },
+                        {
+                            field: "RelatingClassification"
+                        }
+                    ]
+                },
+                {
+                    type: "IfcSIUnit"
+                },
+                {
+                    type: "IfcPresentationLayerAssignment"
+                }
+            ]
+        };
+
+            testModel.query(preLoadQuery, function(loaded){
+                var type = loaded.getType();
+                if(type == "IfcBuildingStorey"){
+                    console.log("found the first");
+                    loaded.getContainsElements(function(relReferencedInSpatialStructure) {
+                        relReferencedInSpatialStructure.getRelatedElements(function (relatedElement) {
+                            var relatedElement = relatedElement;
+                        })
+                    })
+
+                }
+
+            })
     }
 </script>
 
