--- a/index.html
+++ b/index.html
@@ -11,67 +11,60 @@
 
 var debug = {};
 
+
 </script>
 
-<!-- 2 load the theme CSS file -->
-<link rel="stylesheet" href="css/style.min.css" />
+    <!-- Default CSS file to the JS Tree -->
+    <link rel="stylesheet" href="css/style.min.css" />
+    <!-- Jquery import -->
+    <script type="text/javascript" src="./lib/jquery-1.10.2/jquery-1.10.2.min.js"></script>
+    <!-- Js Tree Library -->
+    <script src="lib/jstree.min.js"></script>
+    <!-- Configuration Parameters -->
+    <script type="text/javascript" src="js/configs.js"></script>
 
-<!-- 4 include the jQuery library -->
-<script type="text/javascript" src="./lib/jquery-1.10.2/jquery-1.10.2.min.js"></script>
+    <!-- Bim Surfer Core Libraries -->
+    <script type="text/javascript" src="./lib/jquery-1.10.2/jquery.cookie.js"></script>
+    <script type="text/javascript" src="./api/BIMSURFER.js"></script>
+    <script type="text/javascript" src="./lib/scenejs/scenejs.js"></script>
+    <script type="text/javascript" src="./api/SceneJS.js"></script>
+    <script type="text/javascript" src="./api/Constants.js"></script>
+    <script type="text/javascript" src="./api/ProgressLoader.js"></script>
+    <script type="text/javascript" src="./api/Types/Light.js"></script>
+    <script type="text/javascript" src="./api/Types/Light/Ambient.js"></script>
+    <script type="text/javascript" src="./api/Types/Light/Sun.js"></script>
+    <script type="text/javascript" src="./api/Control.js"></script>
+    <script type="text/javascript" src="./api/Control.js"></script>
+    <script type="text/javascript" src="./api/Control/ClickSelect.js"></script>
+    <script type="text/javascript" src="./api/Control/LayerList.js"></script>
+    <script type="text/javascript" src="./api/Control/ProgressBar.js"></script>
+    <script type="text/javascript" src="./api/Control/PickFlyOrbit.js"></script>
+    <script type="text/javascript" src="./api/Control/ObjectTreeView.js"></script>
+    <script type="text/javascript" src="./api/Events.js"></script>
+    <script type="text/javascript" src="./api/StringView.js"></script>
+    <script type="text/javascript" src="./api/GeometryLoader.js"></script>
+    <script type="text/javascript" src="./api/AsyncStream.js"></script>
+    <script type="text/javascript" src="./api/DataInputStream.js"></script>
+    <script type="text/javascript" src="./api/Viewer.js"></script>
+    <script type="text/javascript" src="./api/Util.js"></script>
 
-<!-- 5 include the minified jstree source -->
-<script src="js/jstree.min.js"></script>
+    <script type="text/javascript" src="js/bimserverapi.js"></script>
+    <script type="text/javascript" src="js/bimserverapibootstrap.js"></script>
 
-<script type="text/javascript" src="./lib/jquery-1.10.2/jquery.cookie.js"></script>
-<script type="text/javascript" src="./api/BIMSURFER.js"></script>
-<script type="text/javascript" src="./lib/scenejs/scenejs.js"></script>
-<script type="text/javascript" src="./api/SceneJS.js"></script>
-<script type="text/javascript" src="./api/Constants.js"></script>
-<script type="text/javascript" src="./api/ProgressLoader.js"></script>
-<script type="text/javascript" src="./api/Types/Light.js"></script>
-<script type="text/javascript" src="./api/Types/Light/Ambient.js"></script>
-<script type="text/javascript" src="./api/Types/Light/Sun.js"></script>
-<script type="text/javascript" src="./api/Control.js"></script>
-<script type="text/javascript" src="./api/Control.js"></script>
-<script type="text/javascript" src="./api/Control/ClickSelect.js"></script>
-<script type="text/javascript" src="./api/Control/LayerList.js"></script>
-<script type="text/javascript" src="./api/Control/ProgressBar.js"></script>
-<script type="text/javascript" src="./api/Control/PickFlyOrbit.js"></script>
-<script type="text/javascript" src="./api/Control/ObjectTreeView.js"></script>
-<script type="text/javascript" src="./api/Events.js"></script>
-<script type="text/javascript" src="./api/StringView.js"></script>
-<script type="text/javascript" src="./api/GeometryLoader.js"></script>
-<script type="text/javascript" src="./api/AsyncStream.js"></script>
-<script type="text/javascript" src="./api/DataInputStream.js"></script>
-<script type="text/javascript" src="./api/Viewer.js"></script>
-<script type="text/javascript" src="./api/Util.js"></script>
-<script type="text/javascript" src="js/bimserverapibootstrap.js"></script>
-<script type="text/javascript" src="js/String.js"></script>
-<script type="text/javascript" src="js/utils.js"></script>
+    <script type="text/javascript" src="js/String.js"></script>
+    <script type="text/javascript" src="js/utils.js"></script>
 
-<link rel="stylesheet" href="./css/basic.css" type="text/css" />
-<link rel="stylesheet" href="./css/example1.css" type="text/css" />
-<link rel="stylesheet" href="./css/bootstrap.css" type="text/css" />
-<link rel="stylesheet" href="./css/font-awesome.css" type="text/css" />
+    <link rel="stylesheet" href="./css/bootstrap.css" type="text/css" />
 
-<link rel="stylesheet" href="./lib/jquery-ui-1.10.3.custom/css/custom-theme/jquery-ui-1.10.3.custom.css">
-
-<script type="text/javascript" src="./lib/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.js"></script>
+    <link rel="stylesheet" href="./css/font-awesome.css" type="text/css" />
+    <!-- Jquery UI css and js , needed for the dialog modal -->
+    <link rel="stylesheet" href="./lib/jquery-ui-1.10.3.custom/css/custom-theme/jquery-ui-1.10.3.custom.css">
+    <script type="text/javascript" src="./lib/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.js"></script>
 
 <!-- <script type="text/javascript" src="./js/example1.js"></script> -->
     <script>
         /* Define the global variables */
-        var selectedNode;
-        var jsonTree = {
-            "core": {
-                "data": []
-            }
-        };
-        var jsonData = {
-            "core": {
-                "data": []
-            }
-        };
+
         var ifcSpaceData = {
             "core": {
                 "data": []
@@ -79,20 +72,17 @@ var debug = {};
         };
         var treeData="";
 
-
-        // testing global data
-        var isDecomposedByVar;
-        var relatedObjectVar;
-        var relatingObjectVar;
         /* From get all of type "ifcProject" */
         var ifcProject;
-        /* All the IFC Types */
-        var ifcTypes;
         /* If it is Ifc Door or Ifc Project or IfcSpace */
         var nodeType;
         var hasAssociationVar;
-        var testModel;
+        var ifcModel;
 
+        /* This gloabal variable is used to get the total count of objects in a building */
+        var totObjects = 0;
+        /* Associated with the context switching of Js tree */
+        var process = true;
 
 //        new Edit
         Global = {};
@@ -214,11 +204,10 @@ var debug = {};
     <!-- Div for the project tree viewer -->
   	<div class="col-xs-3" >
         <div class="col-xs-12">
-            <!-- <div class="col-lg-12">
+            <div class="col-lg-12">
                 <h3>Projects Structure</h3>
-                <button onclick="createDecomposedTree(ifcProject,1,ifcTypes)" >hide</button>
-                <button onclick="loadAllTheData()" >load the tree</button>
-            </div> -->
+                <!--<button onclick="refreshTree()" >refresh the tree</button>-->
+            </div>
 
             <!-- Div tag to display the json tree view-->
             <!-- <div id="ifcSpaceTree" class="treeClass col-lg-12" style="height: 300px; overflow: auto">
@@ -226,7 +215,7 @@ var debug = {};
             </div>
  -->
             <!-- Div tag to display the json tree view-->
-            <div id="treeViewDiv" class="col-lg-12" style="height: 300px; overflow: auto">
+            <div id="treeViewDiv" class="col-lg-12" style="height: 500px; overflow: auto">
 
             </div>
 
@@ -289,270 +278,15 @@ var debug = {};
 
 <script>
 
-    function loadProjectTree(project, roid, node, types){
-          buildDecomposedTree(project, node, types);
-    };
-
-    function createDecomposedTree(object,tree,types) {
-        var name = null;
-        if (object.getLongName != null) {
-            if (object.getLongName() != null && object.getLongName() != "") {
-                name = object.getLongName();
-            }
-        }
-        if (name == null) {
-            if (object.getName() != null && object.getName() != "") {
-                name = object.getName();
-            }
-        }
-        if (name == null) {
-            name = "Unknown";
-        }
-
-////        create a new node
-//        var newNode = Object.create(Node.prototype);
-////        add the id to the newly created node
-//        newNode.init(object.oid, name);
-//        newNode.type = object.getType();
-        var newNode = "newNode";
-        nodeType = object.getType();
-
-//        Setting Up the Icon for the nodeType
-//        if (object.getType() == "IfcProject" || object.getType() == "IfcSite" || object.getType() == "IfcBuilding" || object.getType() == "IfcBuildingStorey" || object.getType() == "IfcSpace") {
-//            newNode.setIcon("hierarchy");
-//        } else {
-//            newNode.setIcon("ball");
-//        }
-
-
-//        Functionalites to the node
-//        newNode.click(othis.treeItemClick);
-//        newNode.hint(object.getType());
-//        var state = types[object.getType()];
-//        othis.createEye(newNode, state == null ? 2 : state.mode);
-//        tree.add(newNode);
-        if (object.getType() == "IfcBuildingStorey") {
-            loadBuildingStorey(newNode, object, types)
-        } else {
-            object.getIsDecomposedBy(function (isDecomposedBy) {
-                isDecomposedBy.getRelatedObjects(function (relatedObject) {
-                    createDecomposedTree(relatedObject, newNode, types);
-                });
-            });
-            if (object.getContainsElements != null) {
-                object.getContainsElements(function (containedElement) {
-                    containedElement.getRelatedElements(function (relatedElement) {
-                        createDecomposedTree(relatedElement, newNode, types);
-                    });
-                });
-            }
-        }
-    }
-
-    function loadBuildingStorey(newNode, object, types){
-        var createdTypes = {};
-        object.getContainsElements(function(relReferencedInSpatialStructure){
-            relReferencedInSpatialStructure.getRelatedElements(function(relatedElement){
-                processRelatedElement(newNode, relatedElement, createdTypes, types);
-            }).done(function(){
-                object.getIsDecomposedBy(function(isDecomposedBy){
-                    if (isDecomposedBy != null) {
-                        isDecomposedBy.getRelatedObjects(function(relatedObject){
-                            processRelatedElement(newNode, relatedObject, createdTypes, types);
-                        });
-                    }
-                });
-            });
-        })
-    };
-
-    function processRelatedElement(parentNode, relatedElement, createdTypes, types){
-        typeNode = createdTypes[relatedElement.getType()];
-        if (typeNode == null) {
-            var typeNode = Object.create(Node.prototype);
-            typeNode.init(relatedElement.getType(), stripIfc(relatedElement.getType()));
-
-            typeNode.setIcon("types");
-            typeNode.type = relatedElement.getType();
-
-            if (types[relatedElement.getType()] == null) {
-                othis.createEye(typeNode, 2);
-            } else {
-                othis.createEye(typeNode, types[relatedElement.getType()].mode);
-            }
-
-            createdTypes[relatedElement.getType()] = typeNode;
-            parentNode.add(typeNode);
-        }
-        createDecomposedTree(relatedElement, typeNode, types);
-    };
-
-
-
-    // testing  functions
-    function startDecompose(object,id){
-
-//        object.model.loadedTypes.IfcDoor['12517654'].getIsDefinedBy(function(definedBy){
-//            definedBy.getRelatedObjects(function(related){
-//                    console.log(related);
-//                })
-//        })
-//
-//        object.model.loadedTypes.IfcDoor['12517654'].getHasAssociations(function(association){
-//            association.getRelatedObjects(function(related){
-//                console.log(related);
-//            })
-//        })
-
-//        if(id==5 || id==4){
-//            object.getHasAssociations(function(association){
-//                association.getRelatedObjects(function(related){
-//                    related.getHasAssociations(function(association1){
-//                        console.log(association1);
-//                    })
-//                })
-//            })
-//            object.getHasAssignments(function(assignments){
-//                console.log(assignments);
-//            })
-////            object.getBoundedBy(function(boundedBy){
-////                console.log(boundedBy);
-////            })
-////            object.getCompositionType(function(compositionType){
-////                console.log(compositionType);
-////            })
-//            object.getContainsElements(function(contains){
-//                console.log(contains);
-//            })
-//            object.getDecomposes(function(decomposes){
-//                console.log(decomposes);
-//            })
-//            object.getReferencedBy(function(decomposes){
-//                console.log(decomposes);
-//            })
-//            object.getReferencesElements(function(decomposes){
-//                console.log(decomposes);
-//            })
-//            object.getIsDefinedBy(function(definedBy){
-//                definedBy.getRelatedObjects(function(related){
-//                    console.log(related);
-//                })
-//
-//            })
-//
-//
-//
-//
-//        }
-//
-        object.getIsDecomposedBy(function(isDecomposed){
-            isDecomposedByVar= isDecomposed;
-            isDecomposedByVar.getRelatedObjects(function(related){
-                relatedObjectVar = related;
-                startDecompose(related,id+1)
-            });
-            isDecomposedByVar.getRelatingObject(function(related){
-                relatingObjectVar = related
-            });
+    /* Refresh the tree var process is used as switch as the refresh triggered the js node selection */
+    function refreshTree(){
+        $('#treeViewDiv').jstree(true).settings.core.data = jsonTree['core']['data'];
+        var tree = $('#treeViewDiv').jstree(true);
+        process = false;
+        $('#treeViewDiv').on('refresh.jstree',function(){
+            process = true;
         });
-
-
-    }
-</script>
-
-<script>
-
-    function loadAllTheData(){
-        //            Edit by Niro
-        var preLoadQuery = {
-            defines: {
-                Representation: {
-                    field: "Representation"
-                },
-                ContainsElementsDefine: {
-                    field: "ContainsElements",
-                    include: {
-                        field: "RelatedElements",
-                        include: [
-                            "IsDecomposedByDefine",
-                            "ContainsElementsDefine",
-                            "Representation"
-                        ]
-                    }
-                },
-                IsDecomposedByDefine: {
-                    field: "IsDecomposedBy",
-                    include: {
-                        field: "RelatedObjects",
-                        include: [
-                            "IsDecomposedByDefine",
-                            "ContainsElementsDefine",
-                            "Representation"
-                        ]
-                    }
-                }
-            },
-            queries: [
-                {
-                    type: "IfcProject",
-                    include: [
-                        "IsDecomposedByDefine",
-                        "ContainsElementsDefine"
-                    ]
-                },
-                {
-                    type: "IfcRepresentation",
-                    includeAllSubtypes: true
-                },
-                {
-                    type: "IfcProductRepresentation"
-                },
-                {
-                    type: "IfcPresentationLayerWithStyle"
-                },
-                {
-                    type: "IfcProduct",
-                    includeAllSubTypes: true
-                },
-                {
-                    type: "IfcProductDefinitionShape"
-                },
-                {
-                    type: "IfcPresentationLayerAssignment"
-                },
-                {
-                    type: "IfcRelAssociatesClassification",
-                    include: [
-                        {
-                            field: "RelatedObjects"
-                        },
-                        {
-                            field: "RelatingClassification"
-                        }
-                    ]
-                },
-                {
-                    type: "IfcSIUnit"
-                },
-                {
-                    type: "IfcPresentationLayerAssignment"
-                }
-            ]
-        };
-
-            testModel.query(preLoadQuery, function(loaded){
-                var type = loaded.getType();
-                if(type == "IfcBuildingStorey"){
-                    console.log("found the first");
-                    loaded.getContainsElements(function(relReferencedInSpatialStructure) {
-                        relReferencedInSpatialStructure.getRelatedElements(function (relatedElement) {
-                            var relatedElement = relatedElement;
-                        })
-                    })
-
-                }
-
-            })
+        tree.refresh();
     }
 </script>
 
