--- a/index.html
+++ b/index.html
@@ -205,7 +205,11 @@ var debug = {};
   	<div class="col-xs-3" >
         <div class="col-xs-12">
             <div class="col-lg-12">
-                <h3>Projects Structure</h3>
+                <h3>Projects Structure
+                    <button type="button" class="btn btn-default" aria-label="Right Align" onclick="refreshTree()">
+                        <span class="fa fa-refresh" aria-hidden="true"></span>
+                    </button>
+                </h3>
                 <!--<button onclick="refreshTree()" >refresh the tree</button>-->
             </div>
 
@@ -236,8 +240,10 @@ var debug = {};
             <div id="tenant">
                 <ul>
                     <li><a href="#tenant_details">Basic Details</a></li>
-                    <li><a href="#tenant_events">Cost Dimension</a></li>
+                    <li><a href="#tenant_events">Properties</a></li>
                     <li><a href="#tenant_jobs">Time Dimension</a></li>
+                    <li><a href="#tenant_documents">Documents</a></li>
+                    <!--<li><a href="#tenant_docs">Documents</a></li>-->
                     <!--<li class="ui-tab-dialog-close"></li>-->
                 </ul>
                 <div>
@@ -262,7 +268,7 @@ var debug = {};
                    </div>
                     <div id="tenant_jobs">
                         <p>Last Serviced - 1 month ago</p>
-                        <p>Depretiation Period - 2 months left</p>
+                        <p>Depreciation Period - 2 months left</p>
                     </div>
                 </div>
             </div>
@@ -312,7 +318,7 @@ $.fn.tabbedDialog = function () {
     this.dialog({
         'autoOpen':false,
         'modal':false,
-        'minWidth':400,
+        'minWidth':450,
         'minHeight':200,
         'maxHeight' : 200,
         'draggable':true,
