added the check box functionality to the js tree

--- a/index.html
+++ b/index.html
@@ -74,9 +74,6 @@ var debug = {};
 
         /* From get all of type "ifcProject" */
         var ifcProject;
-        /* If it is Ifc Door or Ifc Project or IfcSpace */
-        var nodeType;
-        var hasAssociationVar;
         var ifcModel;
 
         /* This gloabal variable is used to get the total count of objects in a building */
@@ -269,6 +266,9 @@ var debug = {};
                     <div id="tenant_jobs">
                         <p>Last Serviced - 1 month ago</p>
                         <p>Depreciation Period - 2 months left</p>
+                    </div>
+                    <div id="tenant_documents">
+                        Dcoument Details
                     </div>
                 </div>
             </div>
