adding new changes

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ var debug = {};
 
     </script>
 <script type="text/javascript" src="./js/final.js"></script>
+<script type="text/javascript" src="./js/modelcontrols.js"></script>
 <script type="text/javascript" src="./js/bootstrap.js"></script>
 
 
