--- a/index.html
+++ b/index.html
@@ -88,14 +88,36 @@ var debug = {};
     <!-- Div for the project tree viewer -->
   	<div class="col-xs-3" >
         <div class="col-xs-12">
+
             <div class="col-lg-12">
 
-                <div class="col-lg-12">
-                    <h4 style="text-align: center">Slider Y Axis</h4>
-                    <p style="text-align: center" id="selectedNode"></p>
-                    <div id="slider"></div>
-                    <div id="s2" style="text-align:center">0.00</div>
+                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                    <div class="panel panel-default">
+                        <div class="panel-heading" role="tab" id="headingThree">
+                            <h4 class="panel-title">
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Slider Bar
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div class="panel-body">
+
+
+                                <div class="col-lg-12">
+                                    <h5 style="text-align: center">Slider Y Axis</h5>
+                                    <p style="text-align: center" id="selectedNode"></p>
+                                    <div id="slider"></div>
+                                    <div id="s2" style="text-align:center">0.00</div>
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
+
                 <h3>Projects Structure
                     <button type="button" class="btn btn-default" aria-label="Right Align" onclick="refreshTree()">
                         <span class="fa fa-refresh" aria-hidden="true"></span>
